# bharatpe-payment-plugin

./: .gitignore  INTEGRATION.md  LICENSE  PAYMENT_FLOW.md  README.md  bharatpe.py  database.py  pyproject.toml  qr_generator.py  requirements.txt
examples/: minimal_bot.py
payment_plugin/: __init__.py  admin.py  config.py  keyboards.py  middleware.py  payment.py
